<resources>
    <string name="app_name">Online_Bidding_System</string>
    <string name="app_name_sell">Deal Now</string>


    //Start Mahendra Strings(IT19120362)
    <string name="ItemNameDemo">Sample Item Name</string>
    <string name="Description_Caption">Description</string>
    <string name="Demo_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequa.</string>
    <string name="EndingTime_caption">Ends At : </string>
    <string name="MaxBid_caption">Max Bid</string>
    <string name="Your_bid_caption">Your Bid</string>
    <string name="StartinfBid_caption">Starting Bid</string>
    <string name="AddBidCaption">Add your bid</string>
    <string name="IncreaseBidCaption">Increase your bid</string>
    <string name="DeleteBidCaption">Delete your bid</string>
    <string name="MybidsTitle">My Bids</string>
    <string name="MybidsCurrentBid">My Bid</string>
    <string name="PlaceBid_Caption">Place Bid</string>
    <string name="PlaceBid_Title">Place Your Bid</string>
    <string name="demo_itemNo">ITEM12458</string>
    <string name="demo_Item_Price">2500.00 Rs</string>
    <string name="staarting_bid_caption">Starting Bid</string>
    <string name="CurrentHighestBid_Caption">Current Highest Bid</string>
    <string name="Ending_Date_Time_Demo">18:00:00  2020/08/15</string>
    <string name="placeBid_text_show">Enter Your Bid Here</string>
    <string name="confirmBid_Title">Confirm Bid</string>
    <string name="MyAuctionpageTitle">My Auctions</string>
    <string name="AuctionIdDemo">AUC1245</string>
    <string name="AuctionCategoryCaption">Category</string>
    <string name="StatusCaption">Status</string>
    <string name="viewAuction">View Auction</string>
    <string name="MyWinsTitle">My Wins</string>
    <string name="AuctionIdCaption">Auction ID : </string>
    <string name="YourBidCap">Your Bid : </string>
    <string name="ProceedToPayCap">Proceed To Pay</string>
    <string name="SellerNameCap">Seller Name : </string>
    <string name="SellerIDCap">Seller ID : </string>
    <string name="SellerIdDemo">SEL2245</string>
    <string name="DraftAuctionsTitle">My Draft Auctions</string>
    <string name="DemoCategory">Electronic</string>
    <string name="NotSetText">Not Set</string>
    <string name="NotStartedText">Not Started</string>
    <string name="PostAuctionText">Post Action</string>
    <string name="EditAuctionText">Edit Action</string>

    //kaveesha(IT19106502)

    <string name="signup">Sign Up</string>
    <string name="home">Home and Garden</string>
    <string name="sports">Sports and Hobbies</string>
    <string name="name">Full Name</string>
    <string name="NIC">NIC Number</string>
    <string name="Email">Email Address</string>
    <string name="pwd">Password </string>
    <string name="address">Address</string>
    <string name="register">Sign Up</string>
    <string name="music">Music Instruments</string>
    <string name="drum">Drums </string>
    <string name="string">String Music Instruments</string>
    <string name="electric">Electric Music Instruments</string>
    <string name="condition">Add Images (Up to 5)</string>
    <string name="upload">Upload Images</string>
    <string name="start">Starting At:</string>
    <string name="Duration">Duration:</string>
    <string name="para">Description:</string>
    <string name="now">Publish Now</string>
    <string name="later">Publish Later</string>
    <string name="NameDemo">Mahendra Thammita</string>
    <string name="EmailDemo">demoEmail@gmail.com</string>
    <string name="AddressDemo">No 123B/18 Kaduwela , Malabe</string>
    <string name="phoneDemo">+94(00) 77 525 4125</string>
    <string name="SaveChangesTitle">Save Changes</string>
    <string name="OpenDrawerDes">Open Drawer</string>
    <string name="CloseDrawerDes">Close Drawer</string>


    //UdithaJ Strings
    <string-array name="categories">
        <item>Ending soon</item>
        <item>Antiques</item>
        <item>Handmade Items</item>
        <item>Books</item>
        <item>DVD and Movies</item>
        <item>Fashion</item>
        <item>Sporting goods</item>
        <item>Music Instruments</item>
        <item>Anything else</item>
    </string-array>
    <string name="antiques">Antiques</string>
    <string name="handmade">Handmade Items</string>
    <string name="books">Books</string>
    <string name="dvd">DVD and Movies</string>
    <string name="fashion">Fashion</string>
    <string name="sport">Sporting goods</string>
    <string name="musicequiment">Music Instruments</string>
    <string name="anything">Anything else</string>


    //Balasooriya B.R.G.R Strings(IT19144054)

    <string name="signin">Sign in</string>
    <string name="emailorusername">Email or Username</string>
    <string name="pwdlogin">Password</string>
    <string name="login">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="dvdmovie">DVD and Movies</string>
    <string name="selectimg">SELECT IMAGES</string>
    <string name="title">Title:</string>
    <string name="startat">Starting At:</string>
    <string name="duration">Duration:</string>
    <string name="contact">Contact:</string>
    <string name="desc">Description:</string>
    <string name="meterial">Meterial:</string>
    <string name="other">Other</string>
    <string name="payment">Payment</string>
    <string name="amount">Amount:</string>
    <string name="cardholder">Card Holders Name:</string>
    <string name="cardno">Card Number:</string>
    <string name="exdate">Expiry Date:</string>
    <string name="cvc">CVC:</string>
    <string name="paynow">PAY NOW</string>
    <string name="highestbid">Highest Bid:</string>
    <string name="timeremain">Time Remaining:</string>
    <string name="placebidbtn">PLACE BID</string>
    <string name="categoryname">Category Name</string>
    <string name="deletebidbtn">DELETE BID</string>
    <string name="publishnowBtn">PUBLISH NOW</string>
    <string name="publishlaterBtn">PUBLISH LATER</string>
    <string name="fashiondtitle">Fashion and Design</string>
    <string name="electrotitle">Electronics</string>
    <string name="homegardentitle">Home and Garden</string>
    <string name="winDateCap">"Date : "</string>
    <string name="demoDate">04/10/2020</string>
    <string name="deleteBidWarning">Please note that  you are not allowed to delete your bid in the last five hours of the ending time</string>
    <string name="title_activity_newhome">NewhomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>