<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rounded_corners"
        android:elevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corners"
            android:padding="5dp">

            <ImageView
                android:id="@+id/AuctioCrdImg"
                android:layout_width="150dp"
                android:layout_height="268dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/phone2"
                android:elevation="5dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="268dp"
                android:layout_toRightOf="@+id/AuctioCrdImg"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/DraftAuctionCardAuctionName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ItemNameDemo"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/DraftAuctionCardAuctionID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AuctionIdDemo"
                    android:textAlignment="center" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/auctionCateCap"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/category"
                        android:text="@string/AuctionCategoryCaption"
                        android:textColor="@color/Black"
                        android:gravity="bottom"/>

                    <TextView
                        android:id="@+id/DraftAuctionCardAuctionCate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/auctionCateCap"
                        android:layout_alignBaseline="@+id/auctionCateCap"
                        android:text="@string/DemoCategory"
                        android:textColor="@color/Black" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/auctionhignbidCap"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/high"
                        android:text="@string/staarting_bid_caption"
                        android:textColor="@color/Black"
                        android:gravity="bottom"/>

                    <TextView
                        android:id="@+id/DraftAuctionCardAuctionStBid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/auctionhignbidCap"
                        android:layout_alignBaseline="@+id/auctionhignbidCap"
                        android:text="@string/demo_Item_Price"
                        android:textColor="@color/Black" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/auctionhignbidEndsAtCap"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/timer_blue"
                        android:text="@string/EndingTime_caption"
                        android:textColor="@color/Black"
                        android:gravity="bottom"/>

                    <TextView
                        android:id="@+id/auctionhignbidEndsAtVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/auctionhignbidEndsAtCap"
                        android:layout_alignBaseline="@+id/auctionhignbidEndsAtCap"
                        android:text="@string/NotSetText"
                        android:textColor="@color/Black" />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/auctionStatudCap"
                        android:layout_width="122dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/status"
                        android:text="@string/StatusCaption"
                        android:textColor="@color/Black"/>

                    <TextView
                        android:id="@+id/auctionStatudVal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/auctionStatudCap"
                        android:layout_alignBaseline="@+id/auctionStatudCap"
                        android:text="@string/NotStartedText"
                        android:textColor="@color/Black" />


                </RelativeLayout>

            </LinearLayout>


        </RelativeLayout>




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>