<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:elevation="10dp"
        android:background="@drawable/rounded_corners"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/rounded_corners">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/myWinCardImg"
                    android:layout_width="110dp"
                    android:layout_height="185dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/watch">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/myWinCardImg"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/myWinCardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Item Name"
                        android:textSize="24sp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:layout_gravity="fill_horizontal"
                        android:textColor="@color/Black">

                    </TextView>



                    <LinearLayout
                        android:id="@+id/MywincardTextArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/mybidmaxBidCap"
                            android:drawableLeft="@drawable/dolloe_back"
                            android:text="@string/Your_bid_caption"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:id="@+id/CardMywinmyBid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/myBidCardImg"
                            android:text="@string/demo_Item_Price"
                            android:textStyle="bold"
                            android:layout_marginLeft="20sp"
                            android:textSize="16sp"
                            android:gravity="right">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/person_id"
                            android:text="@string/SellerIDCap"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:id="@+id/myWinSellerIdVal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/myBidCardImg"
                            android:text="@string/SellerIdDemo"
                            android:textStyle="bold"
                            android:layout_marginLeft="20sp"
                            android:textSize="16sp"
                            android:gravity="right">

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/timeCaptionMybid"
                            android:drawableLeft="@drawable/phone_contact"
                            android:text="Contact No"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:id="@+id/myWinContactNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/myBidCardImg"
                            android:text="@string/AuctionIdDemo"
                            android:layout_marginLeft="5dp"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:gravity="right">

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/calender"
                            android:text="@string/winDateCap"
                            android:textSize="18sp">

                        </TextView>

                        <TextView
                            android:id="@+id/myWinDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20sp"
                            android:layout_toRightOf="@+id/myBidCardImg"
                            android:text="@string/demoDate"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:gravity="right">

                        </TextView>
                    </LinearLayout>





                </LinearLayout>




            </RelativeLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:text="@string/ProceedToPayCap"
                android:textSize="24dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/proceed_to_pay"
                android:gravity="center"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:layout_margin="8dp">

            </Button>

<!--            <View-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:background="@color/Black"-->
<!--                android:layout_marginTop="5dp"/>-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="horizontal">-->

<!--                <Button-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="50dp"-->
<!--                    android:layout_margin="5dp"-->
<!--                    android:text="ACTION"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="24dp"-->
<!--                    android:background="@color/BootstrapPrimary">-->

<!--                </Button>-->


<!--            </LinearLayout>-->

        </LinearLayout>




    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>